Resolve ui issues on dealer locator - Decrease bike dropdowm height on popup for mobile - Fix dealer card width issue on IE browser

--- a/BikeWale.UI/css/dealer/details.css
+++ b/BikeWale.UI/css/dealer/details.css
@@ -302,7 +302,7 @@ input[type="text"]:focus, input[type="email"]:focus, input[type="tel"]:focus { o
     margin-left:10px;
 }
 #city-dealer-list li {
-    width:292px; min-height:140px; margin-right:23px; border: 1px solid #f6f6f6; -webkit-box-shadow: 0 1px 2px rgba(0,0,0,0.2); -moz-box-shadow: 0 1px 2px rgba(0,0,0,0.2); -ms-box-shadow: 0 1px 2px rgba(0,0,0,0.2); -o-box-shadow: 0 1px 2px rgba(0,0,0,0.2); box-shadow: 0 1px 2px rgba(0,0,0,0.2); float: left;
+    width:292px; min-height:140px; margin-right:20px; border: 1px solid #f6f6f6; -webkit-box-shadow: 0 1px 2px rgba(0,0,0,0.2); -moz-box-shadow: 0 1px 2px rgba(0,0,0,0.2); -ms-box-shadow: 0 1px 2px rgba(0,0,0,0.2); -o-box-shadow: 0 1px 2px rgba(0,0,0,0.2); box-shadow: 0 1px 2px rgba(0,0,0,0.2); float: left;
 }
 #city-dealer-list a {
     display: block;
